k8s-deployment/frontend/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: applehaoge/codekids-frontend:latest
          ports:
            - containerPort: 80  # Nginx 容器监听 80 端口
